crates/tlang_parser/tests/snapshots/parser_modules__use_short_path.snap
---
source: crates/tlang_parser/tests/parser_modules.rs
expression: "parse! (\"use math::pi;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: UseDeclaration(UseDeclaration(
        visibility: Private,
        path: [
          Ident(
            name: "math",
            span: Span(
              start: 4,
              end: 8,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 8,
              ),
            ),
          ),
        ],
        items: [
          UseItem(
            name: Ident(
              name: "pi",
              span: Span(
                start: 10,
                end: 12,
                start_lc: LineColumn(
                  line: 0,
                  column: 10,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 12,
                ),
              ),
            ),
            alias: None,
            span: Span(
              start: 10,
              end: 12,
              start_lc: LineColumn(
                line: 0,
                column: 10,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 12,
              ),
            ),
          ),
        ],
        span: Span(
          start: 0,
          end: 0,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 0,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 13,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 13,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 13,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 13,
    ),
  ),
)
